--- a/Resources/Prototypes/_White/Entities/Clothing/Head/hive_head.yml
+++ b/Resources/Prototypes/_White/Entities/Clothing/Head/hive_head.yml
@@ -20,6 +20,7 @@
   - type: DeleteOnChangelingRefund
   - type: FlashImmunity
   - type: EyeProtection
+  - type: FlashSoundSuppression
   - type: HiveHead
 
 - type: entity
