--- a/Resources/Maps/White/WonderBox.yml
+++ b/Resources/Maps/White/WonderBox.yml
@@ -22599,6 +22599,21 @@ entities:
       parent: 2
 - proto: Bola
   entities:
+  - uid: 15785
+    components:
+    - type: Transform
+      pos: -16.008087,52.70469
+      parent: 2
+  - uid: 15786
+    components:
+    - type: Transform
+      pos: -15.883086,52.60045
+      parent: 2
+  - uid: 15808
+    components:
+    - type: Transform
+      pos: -15.737252,52.746384
+      parent: 2
   - uid: 15989
     components:
     - type: Transform
@@ -74161,23 +74176,6 @@ entities:
     components:
     - type: Transform
       pos: 66.5,-59.5
-      parent: 2
-- proto: Bola
-  entities:
-  - uid: 15785
-    components:
-    - type: Transform
-      pos: -15.931884,52.728363
-      parent: 2
-  - uid: 15786
-    components:
-    - type: Transform
-      pos: -15.885009,52.478363
-      parent: 2
-  - uid: 15808
-    components:
-    - type: Transform
-      pos: -15.619384,52.650238
       parent: 2
 - proto: d20Dice
   entities:
@@ -127001,6 +126999,11 @@ entities:
     - type: Transform
       pos: 10.5,-0.5
       parent: 2
+  - uid: 16546
+    components:
+    - type: Transform
+      pos: 27.5,0.5
+      parent: 2
   - uid: 16547
     components:
     - type: Transform
@@ -129817,6 +129820,11 @@ entities:
     components:
     - type: Transform
       pos: 59.5,-2.5
+      parent: 2
+  - uid: 18913
+    components:
+    - type: Transform
+      pos: 4.5,-40.5
       parent: 2
 - proto: ProtolatheMachineCircuitboard
   entities:
@@ -146917,14 +146925,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -59.5,5.5
       parent: 2
-- proto: SurvivalKnife
-  entities:
-  - uid: 19231
-    components:
-    - type: Transform
-      parent: 19230
-    - type: Physics
-      canCollide: False
 - proto: SynthesizerInstrument
   entities:
   - uid: 16
@@ -150693,22 +150693,12 @@ entities:
       parent: 2
 - proto: ToiletEmpty
   entities:
-  - uid: 19230
+  - uid: 16721
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
+      rot: 3.141592653589793 rad
       pos: -35.5,38.5
       parent: 2
-    - type: ContainerContainer
-      containers:
-        stash: !type:ContainerSlot
-          showEnts: False
-          occludes: True
-          ent: 19231
-        disposals: !type:Container
-          showEnts: False
-          occludes: True
-          ents: []
   - uid: 19840
     components:
     - type: Transform
@@ -174139,6 +174129,12 @@ entities:
       parent: 2
 - proto: WindoorSecureArmoryLocked
   entities:
+  - uid: 18569
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -8.5,50.5
+      parent: 2
   - uid: 23349
     components:
     - type: Transform
@@ -174200,12 +174196,6 @@ entities:
     components:
     - type: Transform
       pos: 11.5,48.5
-      parent: 2
-  - uid: 23358
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -8.5,50.5
       parent: 2
   - uid: 23395
     components:
