--- a/Resources/Prototypes/Entities/Effects/chemistry_effects.yml
+++ b/Resources/Prototypes/Entities/Effects/chemistry_effects.yml
@@ -48,6 +48,23 @@
     tags:
     - HideContextMenu
 
+#WD EDIT
+- type: entity
+  parent: BaseFoam
+  id: SmokeTear
+  name: smoketear
+  noSpawn: true
+  components:
+  - type: Sprite
+    color: "#B54B3BBA"
+    sprite: Effects/chemsmoke.rsi
+    state: chemsmoke
+  - type: TimedDespawn
+    lifetime: 10
+  - type: Tag
+    tags:
+    - HideContextMenu
+
 - type: entity
   parent: BaseFoam
   id: Foam
