Fix: Syndie borg can now wield DEsword (#30229)
* Syndie borg can now wield DEsword

* Made child of EnergySwordDouble for borgs
* Made ESword borg module use this new borg DESword

* Removed name property of CyborgDESword so that it now inherits from DESword and added a suffix to differentiate the two in spawn menu

--- a/Resources/Prototypes/Entities/Objects/Specific/Robotics/borg_modules.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Robotics/borg_modules.yml
@@ -539,7 +539,7 @@
       - state: icon-syndicate
     - type: ItemBorgModule
       items:
-      - EnergySwordBorg
+      - CyborgEnergySwordDouble
       - PinpointerSyndicateNuclear
 
 - type: entity
