[Tweak] Something About Metabolism

--- a/Resources/Prototypes/Body/Prototypes/reptilian.yml
+++ b/Resources/Prototypes/Body/Prototypes/reptilian.yml
@@ -13,10 +13,10 @@
     torso:
       part: TorsoReptilian
       organs:
-        heart: OrganAnimalHeart
+        heart: OrganAnthroAnimalHeart # WD
         lungs: OrganHumanLungs
-        stomach: OrganReptilianStomach
-        liver: OrganAnimalLiver
+        stomach: OrganAnthroAnimalStomach # WD
+        liver: OrganAnthroAnimalLiver # WD
         kidneys: OrganHumanKidneys
       connections:
       - right arm
