--- a/Resources/Prototypes/_White/Body/Prototypes/felinid.yml
+++ b/Resources/Prototypes/_White/Body/Prototypes/felinid.yml
@@ -18,10 +18,10 @@
       - left leg
       - right leg
       organs:
-        heart: OrganAnimalHeart
+        heart: OrganAnthroAnimalHeart
         lungs: OrganHumanLungs
-        stomach: OrganReptilianStomach
-        liver:  OrganAnimalLiver
+        stomach: OrganAnthroAnimalStomach
+        liver:  OrganAnthroAnimalLiver
         kidneys: OrganHumanKidneys
     right arm:
       part: RightArmHuman
