--- a/Resources/Prototypes/_White/Body/Prototypes/harpy.yml
+++ b/Resources/Prototypes/_White/Body/Prototypes/harpy.yml
@@ -18,10 +18,10 @@
       - left leg
       - right leg
       organs:
-        heart: OrganHumanHeart
+        heart: OrganAnthroAnimalHeart
         lungs: OrganHumanLungs
-        stomach: OrganHumanStomach
-        liver:  OrganHumanLiver
+        stomach: OrganAnthroAnimalStomach
+        liver:  OrganAnthroAnimalLiver
         kidneys: OrganHumanKidneys
     right arm:
       part: RightArmHuman
