--- a/Resources/Prototypes/_White/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/_White/Entities/Markers/Spawners/mobs.yml
@@ -1,7 +1,7 @@
 - type: entity
   parent: MarkerBase
   id: SpawnMobGondola
-  name: спавнер Гондола
+  name: Gondola spawner
   components:
   - type: Sprite
     layers:
