--- a/Resources/Prototypes/_White/Entities/Mobs/NPCs/gondola.yml
+++ b/Resources/Prototypes/_White/Entities/Mobs/NPCs/gondola.yml
@@ -19,10 +19,8 @@
       - state: gondola_body_medium
         map: [ "enum.DamageStateVisualLayers.Base" ]
         color: "#6e4e40"
-        shader: unshaded
       - state: gondola_moustache_large_short
-        map: [ "enum.DamageStateVisualLayers.BaseUnshaded" ]
-        shader: unshaded
+        map: [ "enum.DamageStateVisualLayers.Base" ]
   - type: RandomSprite
     available:
         - enum.DamageStateVisualLayers.Base:
