--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -634,6 +634,7 @@
   name: loadout-group-jumpsuit
   loadouts:
   - MusicianJumpsuit
+  - MusicianJumpskirt
   - JumpsuitFamily
   - JumpsuitLoungewear
 
