--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/healing.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/healing.yml
@@ -242,6 +242,8 @@
         - SecBeltEquip
     - type: Sprite
       state: tourniquet
+    - type: Item
+      size: Tiny
     - type: Healing
       damageContainers:
         - Biological
@@ -259,7 +261,7 @@
         path: "/Audio/Items/Medical/brutepack_end.ogg"
     - type: Stack
       stackType: Tourniquet
-      count: 2
+      count: 1
     - type: StackPrice
       price: 10
 
