add material storage component to whitemoose

--- a/Resources/Maps/White/WhiteMoose.yml
+++ b/Resources/Maps/White/WhiteMoose.yml
@@ -9545,6 +9545,7 @@ entities:
     - type: NavMap
     - type: BecomesStation
       id: WhiteMooseStation
+    - type: MaterialStorage
   - uid: 3058
     components:
     - type: MetaData
@@ -77108,7 +77109,7 @@ entities:
       - stampedColor: '#006600FF'
         stampedName: stamp-component-stamped-name-centcom
       content: >-
-        Совместная работа отделов повышает эффективность всех сотрудников. Попроси помощи и помоги другим и увидишь, как  тебе проще стало летать в космос. Грабеж и хамство последнее, что ты должен делать.                                                                               
+        Совместная работа отделов повышает эффективность всех сотрудников. Попроси помощи и помоги другим и увидишь, как  тебе проще стало летать в космос. Грабеж и хамство последнее, что ты должен делать.
 
 
 
