Revert "ActivatableUI tweaks (#27448)"
This reverts commit 5b311c6fdbf77db6838bdcf9993b98272d4ebeac.

--- a/Resources/Prototypes/Entities/Objects/Devices/Electronics/door.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Electronics/door.yml
@@ -17,7 +17,7 @@
     - type: AccessReader
     - type: ActivatableUI
       key: enum.DoorElectronicsConfigurationUiKey.Key
-      requiredItems:
+      allowedItems:
         tags:
         - DoorElectronicsConfigurator
     - type: UserInterface
