--- a/Resources/Prototypes/Entities/Objects/Specific/Service/barber.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Service/barber.yml
@@ -10,8 +10,7 @@
   - type: MagicMirror
   - type: ActivatableUI
     key: enum.MagicMirrorUiKey.Key
-    inHandsOnly: true
-    requireActiveHand: true
+    closeOnHandDeselect: true
   - type: UserInterface
     interfaces:
     - key: enum.MagicMirrorUiKey.Key
