--- a/Resources/Prototypes/Entities/Clothing/Hands/gloves.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/gloves.yml
@@ -372,7 +372,8 @@
   - type: MeleeSpeech
   - type: ActivatableUI
     key: enum.MeleeSpeechUiKey.Key
-    verbOnly: true
+    closeOnHandDeselect: false
+    rightClickOnly: true
   - type: Actions
   - type: UserInterface
     interfaces:
