--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -87,6 +87,7 @@
   - type: ActivatableUI
     key: enum.PdaUiKey.Key
     singleUser: true
+    closeOnHandDeselect: false
   - type: UserInterface
     interfaces:
     - key: enum.PdaUiKey.Key
