--- a/Resources/Prototypes/Entities/Objects/Specific/Research/anomaly.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Research/anomaly.yml
@@ -9,7 +9,7 @@
     state: icon
   - type: ActivatableUI
     key: enum.AnomalyScannerUiKey.Key
-    requireActiveHand: false
+    closeOnHandDeselect: false
     inHandsOnly: true
   - type: UserInterface
     interfaces:
