--- a/Resources/Prototypes/Entities/Objects/Specific/atmos.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/atmos.yml
@@ -13,7 +13,7 @@
   - type: ActivatableUI
     inHandsOnly: true
     singleUser: true
-    requireActiveHand: false
+    closeOnHandDeselect: false
     key: enum.GasAnalyzerUiKey.Key
   - type: UserInterface
     interfaces:
