--- a/Resources/Prototypes/Entities/Objects/Tools/access_configurator.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/access_configurator.yml
@@ -67,7 +67,7 @@
     - type: ActivatableUI
       key: enum.AccessOverriderUiKey.Key
       requireHands: true
-      requireActiveHand: false
+      closeOnHandDeselect: false
       singleUser: true
     - type: ItemSlots
     - type: ContainerContainer
