add bible for chaplain loadout

--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/chaplain.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/chaplain.yml
@@ -195,6 +195,15 @@
     back:
     - ArmamentsBeacon
 
+- type: itemLoadout # WD
+  id: Bible
+  equipment: Bible
+- type: startingGear
+  id: Bible
+  storage:
+    back:
+    - Bible
+
 # PDA
 
 - type: itemLoadout # WD
