--- a/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
@@ -1,12 +1,11 @@
 - type: entity
   id: ShowSecurityIcons
+  parent: ShowCriminalRecords # WD
   abstract: true
   noSpawn: true
   components:
   - type: ShowJobIcons
   - type: ShowMindShieldIcons
-  - type: ShowCriminalRecordIcons
-
 
 - type: entity
   parent: ClothingEyesBase
@@ -219,7 +218,7 @@
   - type: ShowSyndicateIcons
 
 - type: entity
-  parent: ClothingEyesBase
+  parent: [ClothingEyesBase, ShowSecurityIcons]
   id: ClothingEyesHudSyndicateAgent
   name: syndicate agent visor
   description: The Syndicate Agent's professional heads-up display, designed for quick diagnosis of their team's status.
@@ -229,7 +228,6 @@
   - type: Clothing
     sprite: Clothing/Eyes/Hud/syndagent.rsi
   - type: ShowSyndicateIcons
-  - type: ShowSecurityIcons
   - type: ShowHealthBars
     damageContainers:
     - Biological
