--- a/Resources/Prototypes/_White/Entities/Clothing/Head/night_vision_goggle.yml
+++ b/Resources/Prototypes/_White/Entities/Clothing/Head/night_vision_goggle.yml
@@ -29,9 +29,8 @@
 
 # Night Vision Goggles (Chameleon) Nuke Ops
 - type: entity
-  parent: ClothingEyesNightVisionGogglesSyndie
+  parent: [ClothingEyesNightVisionGogglesSyndie, ShowSecurityIcons]
   id: ClothingEyesNightVisionGogglesNukie
   suffix: "Хамелеон, Ядерные Оперативники"
   components:
   - type: ShowSyndicateIcons
-  - type: ShowSecurityIcons
