--- a/Resources/Prototypes/_White/sechud.yml
+++ b/Resources/Prototypes/_White/sechud.yml
@@ -1,13 +1,13 @@
 - type: entity
-  id: SecHud
+  id: ShowCriminalRecords
   name: sechud
   abstract: true
   noSpawn: true
   components:
   - type: AccessReader
     access: [["Security"]]
-  - type: SecurityHud
-    criminalrecords:
+  - type: ShowCriminalRecordIcons
+    status:
     - SecurityIconDischarged
     - SecurityIconParoled
     - SecurityIconSuspected
