--- a/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
@@ -250,12 +250,11 @@
       type: ChameleonBoundUserInterface
 
 - type: entity
-  parent: ClothingEyesGlassesThermalSyndie
+  parent: [ClothingEyesGlassesThermalSyndie, ShowSecurityIcons]
   id: ClothingEyesGlassesThermalNukie
   suffix: "Хамелеон, Ядерные Оперативники"
   components:
   - type: ShowSyndicateIcons
-  - type: ShowSecurityIcons
 
 - type: entity
   parent: ClothingEyesBase
