--- a/Resources/Prototypes/audio.yml
+++ b/Resources/Prototypes/audio.yml
@@ -203,7 +203,8 @@
     - /Audio/Ambience/spookyspace1.ogg
     - /Audio/Ambience/spookyspace2.ogg
     - /Audio/Ambience/ambispace2.ogg
-    - /Audio/Lobby/title2.ogg
+
+   # - /Audio/Lobby/title2.ogg
 
 - type: soundCollection
   id: AmbienceSpooky
@@ -320,7 +321,7 @@
       components:
         - type: Morgue
       range: 3
-      
+
 - type: rules
   id: NearSpookyFog
   rules:
